# DevelopmentRAGEnvironment

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
Assets/Editor/RAGChatbot/: CloudRAGClient.cs  IRAGClient.cs  LocalRAGClient.cs  (+4 more)
docs/: cloud-rag-setup.md  cloud-rag.md  content-generation-braintq.md  content-generation.md  distribution-guide.md  document-pipeline-guide.md  environment-setup.html  environment-setup.md  houdini_rag_mcp_setup_guide.md  license-compliance.html  license-compliance.md  local-rag-chromadb-migration.md  local-rag-setup.md  local-rag.md  obsidian-localrag-management.md  rag-system-design.md  terminology.html  terminology.md  ui-implementation-design.md
houdini/python_panels/: graph_view.py  rag_chatbot.py
lecture/: cloud-rag-lecture.html  content-generation-lecture.html  houdini_rag_mcp_lecture.html  license-compliance.html  local-rag-lecture.html  localrag-internals.html  new-rag-setup.html  obsidian-localrag-lecture.html  rag-lecture.html  terminology.html  ui-implementation-lecture.html
scripts/: audit_logger.py  auth_manager.py  auto_index.py  check_gemini_api.py  delete_non_txt.py  document_pipeline.py  document_processor.py  embedding_generator.py  extract_zip.py  gas_cloud_rag.js  localrag_to_notion.py  mcp_server.py  notion_bulk_add.py  notion_bulk_input.yaml  notion_to_corpus.py  pep.py  rag_cli.py  rag_graph_export.py  rag_local_bridge.py  rag_mcp_server.py  rag_mcp_tools.py  rag_service.py  rss_to_rag.py  score_engine.py  sync_houdini21_db.py  vector_database.py
scripts/static/: admin.html  user_ui.html
