[project]
name = "developmentragenvironment"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sentence-transformers",
    "sentencepiece>=0.2.0",
    "chromadb>=1.5.9",
    "markitdown[all]",
    "numpy",
    "rank-bm25>=0.2.2",
    "sudachipy>=0.6.11",
    "sudachidict-core>=20260428",
    "watchdog>=6.0.0",
]
